restoring Integrations icons (not working fully yet)

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -523,6 +523,7 @@ tr.bp-search-parent-field label {
 .bp-integration-card h2 {
 	background-repeat: no-repeat;
 	background-position: left top;
+	background-size: 40px;
 	padding-left: 53px;
 }
 
