--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -517,6 +517,7 @@ tr.bp-search-parent-field label {
 .bp-integration-card h2 {
   background-repeat: no-repeat;
   background-position: right top;
+  background-size: 40px;
   padding-right: 53px;
 }
 
