--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6184,7 +6184,7 @@ button[data-bp-close]:hover {
   transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s cubic-bezier(0.71, 1.7, 0.77, 1.24);
 }
 
-.hint--multiline::after {
+.hint--multiline:after {
   white-space: pre;
 }
 
@@ -10139,7 +10139,7 @@ ul.bb-albums-list .bb-more-photos strong {
   content: "\E80A";
   font-size: 20px;
   position: absolute;
-  font-family: 'bb-icons';
+  font-family: bb-icons;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
