--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
@@ -1,7 +1,7 @@
 // BuddyPress Tooltips
 // @version 3.0.0
 
-@import "vendor/hint/hint";
+@import "vendors/hint/hint";
 
 .hint--multiline:after {
 	white-space: pre;
