--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -389,7 +389,7 @@ tr.bp-search-parent-field label {
 	padding-bottom: 1.2em;
 	font-size: 22px;
 	font-weight: 600;
-	color: #495057;
+	color: #333;
 	border-bottom: 1px solid #eaeaea;
 }
 
@@ -402,8 +402,8 @@ tr.bp-search-parent-field label {
 	font-family: "Font Awesome 5 Free";
     font-weight: 900;
 	margin-right: 1em;
-	color: #fff;
-	background: #495057;
+	color: #333;
+	background: #f6f6f6;
 	padding: 7px;
 	border-radius: 100%;
 
