--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -80,6 +80,7 @@
 
 	#whats-new-toolbar {
 		margin-left: 8.5%;
+		position: relative;
 
 		.post-elements-buttons-item {
 			display: inline-block;
@@ -183,6 +184,10 @@
 				}
 			}
 
+			&.post-emoji {
+				position: absolute;
+				right: 0;
+			}
 		}
 	}
 
