--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1190,6 +1190,13 @@ a.layout-grid-view {
 
 .activity-update-form #whats-new-toolbar {
   margin-right: 8.5%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .activity-update-form #whats-new-toolbar .post-elements-buttons-item {
@@ -1292,6 +1299,11 @@ a.layout-grid-view {
   width: 100%;
   height: 100%;
   min-width: 180px;
+}
+
+.activity-update-form #whats-new-toolbar .post-elements-buttons-item.post-emoji {
+  position: absolute;
+  left: 0;
 }
 
 .activity-update-form #whats-new-textarea textarea {
@@ -10632,6 +10644,7 @@ ul.bb-albums-list .bb-more-photos strong {
   color: #122b46;
   letter-spacing: -0.24px;
   line-height: 26px;
+  padding: 20px 0;
 }
 
 .dropzone .dz-default:before {
