--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1190,6 +1190,7 @@ a.layout-grid-view {
 
 .activity-update-form #whats-new-toolbar {
   margin-right: 8.5%;
+  position: relative;
 }
 
 .activity-update-form #whats-new-toolbar .post-elements-buttons-item {
@@ -1292,6 +1293,11 @@ a.layout-grid-view {
   width: 100%;
   height: 100%;
   min-width: 180px;
+}
+
+.activity-update-form #whats-new-toolbar .post-elements-buttons-item.post-emoji {
+  position: absolute;
+  left: 0;
 }
 
 .activity-update-form #whats-new-textarea textarea {
