profile field helper text

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -100,8 +100,13 @@
 			display: flex;
 			flex-direction: column;
 
+			legend {
+				margin-bottom: $marg-sml;
+			}
+
 			.description {
-				margin-top: $marg-sml;
+				margin-top: -$marg-sml;
+				margin-bottom: $marg-sml;
 				order: 2;
 			}
 
