--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3374,8 +3374,13 @@ body.buddypress.bp-user #page #primary .entry-header {
   flex-direction: column;
 }
 
+.buddypress-wrap .profile.edit .editfield legend {
+  margin-bottom: 10px;
+}
+
 .buddypress-wrap .profile.edit .editfield .description {
-  margin-top: 10px;
+  margin-top: -10px;
+  margin-bottom: 10px;
   order: 2;
 }
 
@@ -5422,8 +5427,7 @@ button[data-bp-close]:hover {
   color: #777;
 }
 
-/*-------------------------------------*\
-	HINT.css - A CSS tooltip library
+/*-------------------------------------*	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -9951,8 +9955,8 @@ ul.bb-albums-list .bb-more-photos strong {
 .bb-album-list-item .bs-cover-wrap:after {
   content: " ";
   position: absolute;
-  background: #0000001a;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, rgba(0, 0, 0, 0) 100%);
+  background: #000000;
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 70%, transparent 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
