Make “customize” tabs more obvious they open new windows

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1053,3 +1053,20 @@ td label.platform-activity {
   line-height: 1.5;
   margin: 0 0 1em;
 }
+
+/* Customize tabs */
+.nav-tab-wrapper .bp-user-customizer,
+.nav-tab-wrapper .bp-group-customizer,
+.nav-tab-wrapper .bp-emails-customizer {
+  padding-right: 6px;
+}
+
+.nav-tab-wrapper .bp-user-customizer:after,
+.nav-tab-wrapper .bp-group-customizer:after,
+.nav-tab-wrapper .bp-emails-customizer:after {
+  font-family: dashicons;
+  content: "\f345";
+  margin-left: 3px;
+  display: inline-block;
+  vertical-align: top;
+}
