--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -564,6 +564,10 @@ table.bp-content-type {
 	background: #fafafa;
 }
 
+body.post-type-bp-group-type .postbox .inside {
+	padding: 2px 22px 22px;
+}
+
 /*
  * 3.4 Site Notices
  */
