--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -562,10 +562,11 @@ form#bp-groups-form .fixed .column-comment {
 
 table.bp-content-type {
 	background: #fafafa;
+	margin-top: 22px;
 }
 
 body.post-type-bp-group-type .postbox .inside {
-	padding: 2px 22px 22px;
+	padding: 0 22px 22px;
 }
 
 /*
