--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -563,6 +563,7 @@ form#bp-groups-form .fixed .column-comment {
 table.bp-content-type {
 	background: #fafafa;
 	margin-top: 22px;
+	border-radius: 3px;
 }
 
 body.post-type-bp-group-type .postbox .inside {
