--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -560,14 +560,25 @@ form#bp-groups-form .fixed .column-comment {
 	width: 20%;
 }
 
-table.bp-content-type {
-	background: #fafafa;
-	margin-top: 22px;
-	border-radius: 3px;
-}
-
 body.post-type-bp-group-type .postbox .inside {
 	padding: 0 22px 22px;
+}
+
+table.bp-content-type {
+	background: #f9f9f9;
+	margin-top: 22px;
+	border-radius: 3px;
+
+	tbody {
+
+		th {
+			width: 23%;
+		}
+
+		td input[type=checkbox] {
+			margin-right: 8px;
+		}	
+	}
 }
 
 /*
