--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -23,6 +23,7 @@ TABLE OF CONTENTS:
 	3.2 Activity List
 	3.3 Groups List & Types
 	3.4 Site Notices
+	3.5 Post Types
 4.0 Emails - Edit page
 5.0 Tools - BuddyBoss
 6.0 Plugins page
@@ -554,31 +555,10 @@ body.users_page_bp-signups td.count_sent {
 }
 
 /*
- * 3.3 Groups List & Types
+ * 3.3 Groups List
  */
 form#bp-groups-form .fixed .column-comment {
 	width: 20%;
-}
-
-body.post-type-bp-group-type .postbox .inside {
-	padding: 0 22px 22px;
-}
-
-table.bp-content-type {
-	background: #f9f9f9;
-	margin-top: 22px;
-	border-radius: 3px;
-
-	tbody {
-
-		th {
-			width: 23%;
-		}
-
-		td input[type=checkbox] {
-			margin-right: 8px;
-		}	
-	}
 }
 
 /*
@@ -665,6 +645,35 @@ table.bp-content-type {
 
 	.bp-new-notice {
 		margin-bottom: 0.5em;
+	}
+}
+
+/*
+ * 3.5 Post Types
+ */
+body.post-type-bp-member-type .postbox .inside,
+body.post-type-bp-group-type .postbox .inside {
+	padding: 0 22px 22px;
+}
+
+table.bp-post-type {
+	background: #f9f9f9;
+	margin-top: 22px;
+	border-radius: 3px;
+
+	thead th {
+		font-weight: 600;
+	}
+
+	tbody {
+
+		th {
+			width: 23%;
+		}
+
+		td input[type=checkbox] {
+			margin-right: 8px;
+		}	
 	}
 }
 
