--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -671,9 +671,10 @@ table.bp-post-type {
 			width: 23%;
 		}
 
-		td input[type=checkbox] {
+		td input[type="checkbox"] {
 			margin-right: 8px;
-		}	
+		}
+
 	}
 }
 
