--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1108,3 +1108,28 @@ ul.bb-albums-list {
 .bb-add-media {
 	display: inline-block;
 }
+
+div.emojionearea .emojionearea-button > div.emojionearea-button-open {
+	opacity: 0;
+}
+
+div.emojionearea.emojionearea-standalone .emojionearea-button > div {
+	top: 0;
+}
+
+.post-emoji .emojionearea .emojionearea-button {
+	opacity: 1;
+	position: static;
+}
+
+.emojionearea .emojionearea-button:before {
+    content: "\263A";
+    font-size: 24px;
+    position: absolute;
+    top: 0;
+    line-height: 1;
+}
+
+.emojionearea.emojionearea-standalone {
+	vertical-align: top;
+}
