--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1119,10 +1119,6 @@ a.layout-grid-view {
 * @section 3.1.1 - Activity Whats New
 *-----------------------------------------------------
 */
-.activity-update-form {
-  padding: 10px 10px 0;
-}
-
 .item-body .activity-update-form .activity-form {
   margin: 0;
   padding: 0;
@@ -1137,25 +1133,35 @@ a.layout-grid-view {
 }
 
 .activity-update-form #whats-new-avatar {
-  margin: 10px 0;
-  text-align: center;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  margin: 0;
 }
 
 .activity-update-form #whats-new-avatar img {
   box-shadow: none;
-  display: inline-block;
+  display: block;
+  margin-right: 10px;
 }
 
-.activity-update-form #whats-new-form.focus-in #whats-new {
-  min-height: 100px;
+.activity-update-form .activity-post-avatar {
+  display: flex;
+  align-items: center;
+}
+
+.activity-update-form #whats-new {
+  outline: none;
+  box-shadow: none;
+  min-height: 80px;
+  padding: 10px;
 }
 
 .activity-update-form #whats-new-content {
-  padding: 0 0 20px 0;
+  padding: 0;
 }
 
 .activity-update-form #whats-new-attachments {
-  margin-left: 8.5%;
+  padding: 10px;
 }
 
 .activity-update-form #whats-new-attachments .activity-attached-gif-container {
@@ -1189,7 +1195,6 @@ a.layout-grid-view {
 }
 
 .activity-update-form #whats-new-toolbar {
-  margin-left: 8.5%;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1197,6 +1202,7 @@ a.layout-grid-view {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  padding: 10px;
 }
 
 .activity-update-form #whats-new-toolbar .post-elements-buttons-item {
@@ -1294,34 +1300,9 @@ a.layout-grid-view {
   min-width: 180px;
 }
 
-.activity-update-form #whats-new-textarea #whats-new,
-.activity-update-form #whats-new-textarea textarea {
-  background: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  color: #333;
-  font-family: inherit;
-  font-size: medium;
-  height: 2.2em;
-  line-height: 1.4;
-  padding: 6px;
-  width: 100%;
-}
-
-.activity-update-form #whats-new-textarea #whats-new:focus,
-.activity-update-form #whats-new-textarea textarea:focus {
-  -webkit-box-shadow: 0 0 6px 0 #d6d6d6;
-  -moz-box-shadow: 0 0 6px 0 #d6d6d6;
-  box-shadow: 0 0 6px 0 #d6d6d6;
-}
-
-.activity-update-form #whats-new-textarea [contenteditable="true"] {
-  border: 1px solid #ccc;
-}
-
 .activity-update-form #whats-new-textarea [contenteditable="true"]:empty:before {
   content: attr(placeholder);
+  color: #BBBBBB;
   display: block;
   /* For Firefox */
 }
@@ -1342,10 +1323,12 @@ a.layout-grid-view {
 }
 
 .activity-update-form #activity-form-submit-wrapper {
+  border-top: 1px solid #ddd;
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
   align-items: center;
+  padding: 0 10px;
 }
 
 .activity-update-form #whats-new-post-in-box {
@@ -1403,30 +1386,7 @@ a.layout-grid-view {
 
 .activity-update-form #whats-new-submit input {
   font-size: 14px;
-  line-height: inherit;
-  margin-bottom: 10px;
-  margin-right: 10px;
-  padding: 0.2em 0;
-  text-align: center;
-  width: 100%;
-}
-
-@media screen and (min-width: 46.8em) {
-  .activity-update-form #whats-new-avatar {
-    display: block;
-    float: left;
-    margin: 0;
-  }
-  .activity-update-form #whats-new-content,
-  .activity-update-form #whats-new-elements,
-  .activity-update-form #activity-form-submit-wrapper {
-    margin-left: 8.5%;
-  }
-  .activity-update-form #whats-new-submit input {
-    margin-bottom: 0;
-    margin-right: 10px;
-    width: 8em;
-  }
+  line-height: 1;
 }
 
 /**
@@ -10142,6 +10102,31 @@ ul.bb-albums-list .bb-more-photos strong {
 
 .bb-add-media {
   display: inline-block;
+}
+
+div.emojionearea .emojionearea-button > div.emojionearea-button-open {
+  opacity: 0;
+}
+
+div.emojionearea.emojionearea-standalone .emojionearea-button > div {
+  top: 0;
+}
+
+.post-emoji .emojionearea .emojionearea-button {
+  opacity: 1;
+  position: static;
+}
+
+.emojionearea .emojionearea-button:before {
+  content: "\263A";
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  line-height: 1;
+}
+
+.emojionearea.emojionearea-standalone {
+  vertical-align: top;
 }
 
 /**
